--- a/addcustomer.html
+++ b/addcustomer.html
@@ -23,8 +23,7 @@
         <li><a href="">Log off</a></li>
     </ul>
     <h1> HI Github</h1>
-    <h1>Hi will</h1>
-    <h1>Hi</h1>
+    <h1>Hope this works!!!</h1>
 
 
 
